Fix: aba de rolagem horizontal e menu de navegação
Bug da aba de rolagem horizontal no qual ela aparecia para certos tamanhos de tela corrigidos e menu inicial adicionado.

--- a/pages/index.html
+++ b/pages/index.html
@@ -22,17 +22,42 @@
 <body>
 
     <header>
-        <span>
-            <h2>Bem vindo.</h2>
+        <nav>
+            <ul class="nav-list-flex">
 
-            <p>Esta é uma interface integrada à uma API externa.</p>
-            <p>Os campos abaixo servem para criar, modificar e deletar os cards.</p>
-            <p>As informações dos cards são preenchidas com as respostas do servidor.</p>
-            <p>As operações realizadas por essa interface são um 'CRUD' básico.</p>
-        </span>
+                <li>
+                    <a href="https://github.com/Callegari0/API-CRUD/blob/main/README.md" target="_blank"
+                        class="li-a-text-decoration">
+                        <span>
+                            <img src="../images/instructions-icon.svg" alt="Instruções">
+                            <p>Instruções</p>
+                        </span>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://callegari0.github.io/Projetos-e-contato/" target="_blank"
+                        class="li-a-text-decoration">
+                        <img src="../images/internet-icon.svg" alt="Site pessoal">
+                        <p>Página pessoal</p>
+                    </a>
+                </li>
+
+                <li>
+                    <a href="https://www.linkedin.com/in/luiz-eduardo-perez-callegario-592004187/" target="_blank"
+                        class="li-a-text-decoration">
+                        <img src="../images/linkedin-icon.svg" alt="Contato">
+                        <p>LinkedIn</p>
+                    </a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main>
+
+        <p class="main-inicial-phrase">Olá, antes de testar as funcionalidades dessa interface, leia as intruções :)</p>
+
         <div class="container-global">
 
             <div class="div-form-flex">
