--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-    <title>Document</title>
+    <title>API-CRUD</title>
 </head>
 
 <body>
