--- a/pages/index.html
+++ b/pages/index.html
@@ -56,7 +56,7 @@
 
     <main>
 
-        <p class="main-inicial-phrase">Olá, antes de testar as funcionalidades dessa interface, leia as intruções :)</p>
+        <p class="main-inicial-phrase">Olá, antes de testar as funcionalidades dessa interface, leia as instruções :)</p>
 
         <div class="container-global">
 
